--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body{
     font-size: 1rem;
     box-sizing: border-box;
     font-family:  Arial, sans-serif;
+    background-color:#faf3ea ;
 }
 
 
@@ -58,7 +59,7 @@ li{
 }
 /*******menu******/
 .menu{
-    margin-top: 12rem;
+    margin-top: 9rem;
 }
 
 .menu ul {
@@ -89,7 +90,7 @@ li{
 /*****déco*********/
 
 .deconnexion{
-    margin-top: 16rem;
+    margin-top: 12rem;
 }
 
 /*************************************Prémière row******************************************/
@@ -251,10 +252,6 @@ li{
  }
 /****************************************************deuxième row********************/
 
-.row-2{
-    
-}
-
 .monitoring{ 
     margin-top: 4rem;
 }
@@ -287,3 +284,208 @@ li{
 .box{
     margin-top: 4rem;
 }
+/*********************************************************part2*******************************************/
+
+.profil{
+    float: right;
+    clear: both;
+}
+
+.profil ul li{
+    display: inline-flex;
+    margin-right: 1rem;
+}
+
+.profil ul li a{
+    color: black;
+}
+
+
+.photo{
+    height: 4rem;
+    width: 4rem;
+    background-color: yellow;
+    border-radius: 1rem;
+    background: url(../images/user.png);
+    background-size: cover;
+    margin-top: .4rem;
+}
+
+/*****************row***********************/
+
+.row-profil{
+    margin-top: 10rem;
+    background-color: #f6f6fc;
+    padding: 3rem;
+    border-top-left-radius: 2rem;
+}
+
+.card{
+    padding: .6rem;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    height: 10rem;
+    width: 17rem;
+}
+/*********************************************************************/
+.card-title1{
+    width: 100%;
+    height: 5rem;
+    background-color:var(--color-rose);
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+}/****************************/
+
+.card-title1 .fa{
+    color: white;
+}
+
+.card-title2{
+    width: 100%;
+    height: 5rem;
+    background-color:var(--color-yellow);
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+}/****************************/
+
+.card-title2 .fa{
+    color: white;
+}
+
+.card-title3{
+    width: 100%;
+    height: 5rem;
+    background-color:var(--color-bleuclair);
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+}/****************************/
+
+.card-title3 .fa{
+    color: white;
+}
+
+.card-title4{
+    width: 100%;
+    height: 5rem;
+    background-color:#e7e7f7;
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+}/****************************/
+
+.card-title4 .fa{
+    color: white;
+}
+
+.icon1{
+    width: 3rem;
+    height:3rem;
+    background-color: #fca8b0;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+
+.icon2{
+    width: 3rem;
+    height:3rem;
+    background-color: #fdd695;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+
+.icon3{
+    width: 3rem;
+    height:3rem;
+    background-color: #c5f4fd;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+
+.icon4{
+    width: 3rem;
+    height:3rem;
+    background-color: #f3f3fb;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+
+/************************************************************************/
+
+.card-text{
+    display: flex;
+    margin-top: 1rem;
+}
+
+.deufa{
+    margin-left: 10rem;
+}
+
+.check1{
+    margin-left: 5rem;
+    color: var(--color-rose);
+}
+
+.check2{
+    margin-left: 5rem;
+    color: var(--color-yellow);
+}
+
+.check3{
+    margin-left: 5rem;
+    color: var(--color-bleuclair);
+}
+
+.check4{
+    margin-left: 5rem;
+    color: #e7e7f7;
+}
+
+/********************Dernière row***************/
+
+.card-title5{
+    display: flex;
+}
+
+.bprofil .card{
+    padding: .6rem;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+    height: 20rem;
+    width: 100%;
+}
+
+.toggle{
+    height: 3rem;
+    width: 6rem;
+    border: 1px solid black;
+    border-radius: 1rem;
+    display: flex;
+    margin-left: 21rem;
+}
+
+/************graph****************/
+
+.graph{
+    display: flex;
+    justify-content: space-between;
+}
+
+.graph1{
+    width: 1rem;
+    height: 14rem;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
+    background-color: var(--color-bleupur);
+}
+
+.graph2{
+    width: 1rem;
+    height: 14rem;
+    border-radius: 1rem;
+    border: 1px solid #ccc;
+    background-color:var(--color-yellow);
+}
+
